tests/neg/i16130.scala
@main def ParameterizedTypeLacksArgumentsID =
  trait Foo(x: Int)
  val foo = new Foo {}  // error
